# libqrcode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ci_build.Dockerfile  ci_build.sh  conan_demo.sh  conanfile.py
.github/workflows/: ci_build.yml  conan.yml  conan_demo.yml  main.yml
ci/: linux_build.sh  win.Dockerfile
conan_demo/: CMakeLists.txt  Dockerfile  build.sh  demo.cpp
demo/: CMakeLists.txt  conanfile.txt  demo.cpp
include/cx/: cmath.h  vector.h
include/qrcode/: qrcode.h  result.h  svg.h  symbol.h
include/qrcode/code/: bit_view.h  block_info.h  byte_view.h  code_block.h  code_capacity.h  codeword_view.h  error_correction_code.h  error_correction_polynomial.h  extended_remainder.h  format_encoding.h  gf2p8.h  lfsr.h  padding_view.h  polynomial.h  polynomial_view.h  sequence.h  sequence_description.h  sequence_permutation.h  sequence_view.h
include/qrcode/data/: alphanumeric.h  alphanumeric_encoder.h  alphanumeric_encoding.h  bit_stream.h  byte.h  byte_encoder.h  encoders.h  indicator.h  kanji.h  kanji_encoder.h  kanji_encoding.h  numeric.h  numeric_encoder.h  numeric_encoding.h
include/qrcode/data/best_fit/: best_encoder.h  data_encoding.h  data_length.h
include/qrcode/data/optimizer/: data_encoding.h  data_length.h  determine_mode.h  dispatch_mode.h  mode.h  optimize.h  optimizer_state.h
include/qrcode/eci/: assignment_number.h  message_header.h  view.h
include/qrcode/micro_qr/: best_version.h  code_bits.h  code_capacity.h  encoders.h  error_correction.h  finalize_symbol.h  finder_pattern.h  format_information.h  generator_degree.h  mask_pattern.h  micro_qr.h  penalty_score.h  raw_code.h  separator_pattern.h  symbol_designator.h  symbol_number.h  symbol_version.h  timing_pattern.h  total_data_bits.h
include/qrcode/qr/: adjacent_score.h  alignment_pattern.h  best_version.h  code_bits.h  code_capacity.h  dark_module_score.h  data_encoding.h  data_length.h  encoders.h  error_correction.h  finalize_symbol.h  finder_like_score.h  finder_pattern.h  fit_version.h  format_information.h  generator_degree.h  mask_pattern.h  optimized_data_encoding.h  optimized_data_length.h  penalty_score.h  penalty_weight.h  qr.h  raw_code.h  same_color_score.h  separator_pattern.h  symbol_designator.h  symbol_version.h  timing_pattern.h  total_blocks.h  total_data_bits.h  version_category.h  version_information.h
include/qrcode/structure/: apply_mask.h  cartesian_product_view.h  data_masking.h  dimension.h  element_view.h  horizontal_view.h  make_matrix.h  matrix.h  module.h  module_traits.h  occupied_columns.h  place_data.h  position.h  separator_pattern.h  skip_column_view.h  timing_pattern.h  vertical_view.h  zigzag_view.h
test/: CMakeLists.txt  linux.Dockerfile  linux_run.sh  main.cpp  win.Dockerfile  win_run.ps1  win_run.sh
